* api: add new functions: hashtable_get_string, hook_info_hashtable,
  info_get_hashtable, hook_hsignal, hook_hsignal_send,
  hook_completion_get_string, nicklist_group_get_integer,
  nicklist_group_get_string, nicklist_group_get_pointer, nicklist_group_set,
  nicklist_nick_get_integer, nicklist_nick_get_string, nicklist_nick_get_pointer,
  nicklist_nick_set
* irc: add command /notify, new options irc.look.notify_tags_ison,
  irc.look.notify_tags_whois, irc.network.notify_check_ison,
  irc.network.notify_check_whois, new option "notify" in servers, new infolist
  "irc_notify" (task #5441)
* irc: add new option irc.look.nick_color_force (task #7374)
* irc: improve nick prefixes, all modes (even unknown) are used with PREFIX
  value from message 005
* irc: add command redirection with hsignals irc_redirect_pattern and
  irc_redirect_command (task #6703)
* irc: add new options irc.color.nick_prefix and irc.color.nick_suffix
* irc: add new option irc.look.item_away_message
* irc: add tag "nick_xxx" in user messages
* irc: move options from network section to server section: connection_timeout,
  anti_flood_prio_high, anti_flood_prio_low, away_check, away_check_max_nicks,
  default_msg_part, default_msg_quit (task #10664, task #10668)
* irc: rename options irc.look.open_channel_near_server and
  irc.look.open_pv_near_server to irc.look.new_channel_position and
  irc.look.new_pv_position with new values (none, next or near_server)
* irc: display old channel topic when topic is unset (task #9780)
* irc: add new info_hashtable "irc_parse_message"
* irc: fix crash/bug when option "addresses" for a server is unset or changed
  when WeeChat is connected to this server (bug #31268)
* irc: switch to next server address when IRC error is received after TCP
  connection but before message 001 (bug #30884)
* irc: fix bug with hostmasks in command /ignore (bug #30716)
* irc: add signal "irc_input_send"
* rmodifier: new plugin "rmodifier": alter modifier strings with regular