@@ -30,6 +30,7 @@ Version 0.3.4 (under dev!)
   nicklist_group_get_string, nicklist_group_get_pointer, nicklist_group_set,
   nicklist_nick_get_integer, nicklist_nick_get_string, nicklist_nick_get_pointer,
   nicklist_nick_set
+* alias: complete with alias value for second argument of command /alias
 * irc: add command /notify, new options irc.look.notify_tags_ison,
   irc.look.notify_tags_whois, irc.network.notify_check_ison,
   irc.network.notify_check_whois, new option "notify" in servers, new infolist
